example/lib/src/generated/errors/errors_localization_bn.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Bengali Bangla (`bn`).
class ErrorsLocalizationBn extends ErrorsLocalization {
  ErrorsLocalizationBn([String locale = 'bn']) : super(locale);

  @override
  String get error => 'একটি ত্রুটি ঘটেছে';

  @override
  String get unexpectedError => 'একটি অপ্রত্যাশিত ত্রুটি ঘটেছে';

  @override
  String get bugReportSentText => 'বাগ রিপোর্ট সফলভাবে পাঠানো হয়েছে।';
}
